<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="actionBarTitle"> </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userNameTextView">UserName:</string>
    <string name="passwordTextView">Password:</string>
    <string name="welcomeTextView">Welcome!!</string>
    <string name="userNameHint">Username here..</string>
    <string name="passwordEditHint">Enter Password</string>
    <string name="signUpButton"> Click to Create</string>
    <string name="loginButton">Login</string>
    <string name="confirmPasswordText">Re-enter</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="shoe_name">Shoe Name:</string>
    <string name="invetory">Invetory</string>
    <string name="inventoryItems">Items</string>
    <string name="welcome">Welcome !!</string>
    <string name="instructions">Instructions</string>
    <string name="soles_inventory">Soles Inventory</string>
    <string name="cancelButton">Cancel</string>
    <string name="createButton">Create</string>
    <string name="how_to_view_items">Click on shoe to View Item</string>
    <string name="how_to_remove">How to remove:</string>
    <string name="instructions_page">Instructions Page</string>
    <string name="adding">Adding</string>
    <string name="create">Create</string>
    <string name="submit">Submit</string>
    <string name="enter_shoe_details">Enter Shoe Details</string>
    <string name="description">Description</string>
    <string name="ClickOnView">Click On View</string>
</resources>
